--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
+    "react-use-gesture": "^9.1.3",
     "sass": "^1.37.5",
     "web-vitals": "^1.1.2"
   },
